--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "react-redux": "^7.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "tailwindcss": "^1.1.4"
   },
   "scripts": {
-    "start": "yarn run tailwind && react-scripts start",
+    "start": "npm run tailwind && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
